--- a/authentication/templates/authentication/includes/add-person-app/template.html
+++ b/authentication/templates/authentication/includes/add-person-app/template.html
@@ -16,7 +16,22 @@
       <div class="card-body">
         <form @submit.prevent="add_person()">
           <div class="row">
-            <div class="col-md-12">
+
+            
+            <div class="col-md-3">
+              <div class="form-group">
+                <label for="">کاربر</label> 
+                <select name="" id="" v-model="user_id"  class="form-control">
+                  {% for user in users_for_add_person_app %}
+                    
+                  <option value="{{user.id}}">{{user.username}}</option>
+                  {% endfor %}
+                </select>
+              </div>
+            </div>
+
+
+            <div class="col-md-3">
               <div class="form-group">
                 <label for="">جنسیت</label>
                 <select v-model="gender" required type="text" class="form-control">
@@ -27,18 +42,7 @@
               </div>
             </div>
 
-            <div class="col-md-12">
-              <div class="form-group">
-                <label for="">پیشوند</label>
-                <select v-model="prefix" required type="text" class="form-control">
-                  {% for prefix in prefixes %}
-                  <option value="{{prefix}}">{{prefix}}</option>
-                  {% endfor %}
-                </select>
-              </div>
-            </div>
-
-            <div class="col-md-12">
+            <div class="col-md-3">
               <div class="form-group">
                 <label for="">ماهیت</label>
                 <select v-model="type" required type="text" class="form-control">
@@ -49,7 +53,7 @@
               </div>
             </div>
 
-            <div class="col-md-12">
+            <div class="col-md-3">
               <div class="form-group">
                 <label for="">نوع</label>
                 <select v-model="type2" required type="text" class="form-control">
@@ -60,23 +64,38 @@
               </div>
             </div>
 
-            <div class="col-md-6">
+
+           
+
+
+            <div class="col-md-4">
               <div class="form-group">
-                <label for="">کاربر</label>
-                <input @input="select_user()" v-model="user_id" required type="number" class="form-control" />
+                <label for="">پیشوند</label>
+                <select v-model="prefix" required type="text" class="form-control">
+                  {% for prefix in prefixes %}
+                  <option value="{{prefix}}">{{prefix}}</option>
+                  {% endfor %}
+                </select>
               </div>
             </div>
 
-            <div class="col-md-6">
+
+            <div class="col-md-4">
               <div class="form-group">
-                <div class="media">
-                  <div class="media-body mr-2">
-                    <span v-text="username"></span>
-                  </div>
-                </div>
+                <label for="">نام</label>
+                <input v-model="first_name" type="text" class="form-control" />
               </div>
             </div>
 
+
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="">نام خانوادگی</label>
+                <input v-model="last_name" type="text" class="form-control" />
+              </div>
+            </div>
+
+            
             <div class="col-md-12">
               <div class="form-group">
                 <label for="">عنوان</label>
@@ -85,21 +104,53 @@
             </div>
 
 
-            <div class="col-md-12">
+            
+            <div class="col-md-4">
               <div class="form-group">
-                <label for="">نام</label>
-                <input v-model="first_name" type="text" class="form-control" />
+                <label for="">تلفن</label>
+                <input v-model="tel" type="text" class="form-control" />
+              </div>
+            </div>
+
+            
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="">کد پستی</label>
+                <input v-model="postal_code" type="text" class="form-control" />
               </div>
             </div>
 
 
-            <div class="col-md-12">
+            
+            <div class="col-md-4">
               <div class="form-group">
-                <label for="">نام خانوادگی</label>
-                <input v-model="last_name" type="text" class="form-control" />
+                <label for="">شماره اقتصادی</label>
+                <input v-model="economic_no" type="text" class="form-control" />
               </div>
             </div>
 
+
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="">کد ملی</label>
+                <input v-model="melli_code" type="text" class="form-control" />
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="">ایمیل</label>
+                <input v-model="email" type="text" class="form-control" />
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="">موبایل</label>
+                <input v-model="mobile" type="text" class="form-control" />
+              </div>
+            </div>
+ 
             <div class="col-md-12">
               <div class="form-group">
                 <label for="">آدرس</label>
@@ -107,35 +158,13 @@
               </div>
             </div>
 
+
             <div class="col-md-12">
               <div class="form-group">
                 <label for="">بیو</label>
                 <input v-model="bio" type="text" class="form-control" />
               </div>
             </div>
-
-            <div class="col-md-12">
-              <div class="form-group">
-                <label for="">کد ملی</label>
-                <input v-model="melli_code" type="text" class="form-control" />
-              </div>
-            </div>
-
-            <div class="col-md-12">
-              <div class="form-group">
-                <label for="">ایمیل</label>
-                <input v-model="email" type="text" class="form-control" />
-              </div>
-            </div>
-
-            <div class="col-md-12">
-              <div class="form-group">
-                <label for="">موبایل</label>
-                <input v-model="mobile" type="text" class="form-control" />
-              </div>
-            </div>
-
-            <div class="col-md-4"></div>
 
             <div class="col-md-12">
               <button class="btn btn-success" v-if="!waiting" type="submit">
