--- a/accounting/templates/accounting/account.html
+++ b/accounting/templates/accounting/account.html
@@ -60,6 +60,19 @@
         {% include "accounting/includes/add-financial-document-line-app/template.html" %}
     </div>
     {% endif %}
+
+    
+     
+    {% if set_page_thumbnail_header_form %}
+     
+    <div class="col-md-12">
+        {% include "core/includes/page-thumbnail-header-app/template.html" %}
+
+    </div>
+  
+    {% endif %}
+
+    
 </div>
 {% endblock content %}
 
