--- a/accounting/templates/accounting/includes/add-invoice-app/script.html
+++ b/accounting/templates/accounting/includes/add-invoice-app/script.html
@@ -1,5 +1,7 @@
 {% include "accounting/includes/account-app/select-script.html" %}
 <script>
+ 
+
   let add_invoice_app = new Vue({
     el: "#add-invoice-app",
     data: {
@@ -8,24 +10,52 @@
     event_time: current_time,
     event_datetime: current_datetime,
     bedehkar: false ,
-    bestankar: false ,  
-    bedehkar_code: "0", 
-    bestankar_code: "0",  
+    bestankar: false ,
+    bedehkar_code: "0",
+    bestankar_code: "0",
     message:{show:false},
-    waiting:false, 
+    waiting:false,
     },
 
     components: {
       DatePicker: VuePersianDatetimePicker,
     },
     methods: {
-      
 
+      paste_bestankar:async ()=>{
+          console.log('paste_bestankar ')
+
+           try {
+            const text = await navigator.clipboard.readText();
+            add_invoice_app.bestankar_code=String(text)
+            add_invoice_app.select_bestankar()
+             
+          } catch (err) {
+            console.error('Failed to read clipboard contents: ', err);
+          }
+
+        },
+        paste_bedehkar:async ()=>{
+          console.log('paste_bedehkar ')
+
+           try {
+            const text = await navigator.clipboard.readText();
+            add_invoice_app.bedehkar_code=String(text)
+            add_invoice_app.select_bedehkar()
+             
+          } catch (err) {
+            console.error('Failed to read clipboard contents: ', err);
+          }
+
+        },
       swap: function () {
         let bed = add_invoice_app.bedehkar;
         let bes = add_invoice_app.bestankar;
         add_invoice_app.bedehkar = bes;
         add_invoice_app.bestankar = bed;
+        add_invoice_app.bedehkar_code = bes.code;
+        add_invoice_app.bestankar_code = bed.code;
+
       },
       to_price_colored: function (vall) {
         let colorr = "primary";
@@ -50,7 +80,7 @@
           console.log(add_invoice_app.bedehkar);
           select_account_by_code(add_invoice_app.bedehkar_code).done((data) => {
               add_invoice_app.bedehkar = data.account;
-              
+
               if (data.result === "SUCCEED") {
                   console.log(data.account);
             if (data.account.nature === "{{ONLY_BESTANKAR}}") {
@@ -72,7 +102,7 @@
               if (data.account.nature === "{{ONLY_BEDEHKAR}}") {
                   return;
                 }
-                
+
                 add_invoice_app.bestankar = data.account;
           } else {
             add_invoice_app.bestankar = false
