--- a/accounting/templates/accounting/includes/person-account-app/card.html
+++ b/accounting/templates/accounting/includes/person-account-app/card.html
@@ -4,10 +4,10 @@
 {% load account_code_seperator %}
 
 {% load to_price_color_btn %}
-<div class="card rtl text-right">
+<div class="card rtl text-right" id="person-account-app">
     <div class="card-header">
         <h5 class="text-center">
-            حساب
+            حساب شخص
         </h5>
     </div>
     <div class="card-body">
@@ -30,15 +30,35 @@
 </h6>
         
  
+ 
+          <div>
 
-        <h5 class="text-center mt-4">
-            <small class="text-muted">
-                کد : 
-            </small>
-            {{account.code}}
+      <button  @click="copy_code()" class="my-2 btn btn-{{account.color}}">
+        <small class=""> کد : </small>
+        {{account.code}}
+        <i class="fa fa-copy"></i>
+        
+        <span v-if="show_code_copied">
+          کپی شد
+        </span>
+      </button>
+      
+    </div>
 
-        </h5> 
-         
+
+<div>
+
+  <button  @click="copy_balance()" class="my-2 btn btn-{{account.balance_color}}">
+    <small class=""> مانده : </small>
+    {{account.balance|to_price}}
+        <i class="fa fa-copy"></i>
+    
+    <span v-if="show_balance_copied">
+      کپی شد
+    </span>
+  </button>
+</div>
+
 
         <h5 class="text-center mt-4">
             <small class="text-muted">
