--- a/accounting/templates/accounting/includes/account-app/card-full.html
+++ b/accounting/templates/accounting/includes/account-app/card-full.html
@@ -5,7 +5,7 @@
 <div class="card rtl text-right">
     <div class="card-header">
         <h5 class="text-center">
-            حساب
+            حساب فول
         </h5>
     </div>
     <div class="card-body">
