--- a/accounting/templates/accounting/includes/accounts-app/template.html
+++ b/accounting/templates/accounting/includes/accounts-app/template.html
@@ -49,8 +49,8 @@
         <div class="table-responsive">
           <table class="table table-striped">
             <thead>
+              <th> حساب</th>
               <th>کد</th>
-              <th>نام حساب</th>
               <th>مانده</th>
               <th></th>
             </thead>
@@ -62,17 +62,19 @@
                  
                 </td>
                 <td>
-                  <a :href="account.get_absolute_url">
-                    <span
-                      :class="'text-'+account.color"
-                      v-text="account.name"
-                    ></span>
-                    <span
-                      :class="'badge badge-'+account.color"
-                      v-text="account.type"
-                    ></span>
-                  </a>
+                   <div>
+      <div class="text-center">
+      <div class="my-2">
+          <button @click="copy_code(account)" :class="'my-2 btn btn-'+account.color">
+            <small class=""> کد : </small>
+            <small v-text="account.code">   </small>
+            <i class="fa fa-copy"></i>
+          </button>
+        </div>
+      </div>
+    </div>
                 </td>
+              
                 <td>
                   <span v-html="to_price(account.balance)"></span>
                   <small class="text-muted mr-1"> {{CURRENCY}} </small>
