--- a/accounting/templates/accounting/person-account.html
+++ b/accounting/templates/accounting/person-account.html
@@ -2,6 +2,10 @@
 
 
 {% block content %}
+   {% if account.parent %} 
+    <div class="rtl my-2">{{account.parent.get_breadcrumb|safe}}</div>
+    {% endif %} 
+    
 <div class="row rtl farsi">
     <div class="col-md-4">
         {% include "accounting/includes/person-account-app/card.html" %}
