--- a/accounting/templates/accounting/includes/add-financial-event-app/template.html
+++ b/accounting/templates/accounting/includes/add-financial-event-app/template.html
@@ -101,7 +101,7 @@
                                     <hr>
                                     <a :href="bedehkar.get_absolute_url" v-if="bedehkar.name">
                                         <div class="media">
-                                            <img :src="bedehkar.logo" width="64" alt="">
+                                            <img :src="bedehkar.thumbnail" width="64" alt="">
                                             <div class="mr-2 media-body">
                                                 <h5 class="my-2">
                                                     <span :class="'text-'+bedehkar.color" v-text="bedehkar.name"></span>
@@ -155,7 +155,7 @@
                                     <hr>
                                     <a :href="bestankar.get_absolute_url" v-if="bestankar.name">
                                         <div class="media">
-                                            <img :src="bestankar.logo" width="64" alt="">
+                                            <img :src="bestankar.thumbnail" width="64" alt="">
                                             <div class="mr-2 media-body">
                                                 <h5 class="my-2">
                                                     <span :class="'text-'+bestankar.color"
