--- a/accounting/templates/accounting/includes/financial-event-app/card-contents.html
+++ b/accounting/templates/accounting/includes/financial-event-app/card-contents.html
@@ -12,7 +12,7 @@
 
     <a href="{{financial_event.bedehkar.get_absolute_url}}">
         <div class="media">
-            <img src="{{financial_event.bedehkar.logo}}" width="48" alt="">
+            <img src="{{financial_event.bedehkar.thumbnail}}" width="48" alt="">
             <div class="media-body mr-2">
                 <span>
                     {{financial_event.bedehkar.name}}
@@ -33,7 +33,7 @@
 
     <a href="{{financial_event.bestankar.get_absolute_url}}">
         <div class="media">
-            <img src="{{financial_event.bestankar.logo}}" width="48" alt="">
+            <img src="{{financial_event.bestankar.thumbnail}}" width="48" alt="">
             <div class="media-body mr-2">
                 <span>
                     {{financial_event.bestankar.name}}
