--- a/accounting/templates/accounting/includes/financial-events-app/template.html
+++ b/accounting/templates/accounting/includes/financial-events-app/template.html
@@ -92,7 +92,7 @@
 
                                      <div class="media">
                                         <a :href="financial_event.bedehkar.get_absolute_url">
-                                            <img :src="financial_event.bedehkar.logo" class="rounded" width="32" alt="">
+                                            <img :src="financial_event.bedehkar.thumbnail" class="rounded" width="32" alt="">
                                         </a>
                                         <div class="media-body mr-3">
                                             <div>
@@ -123,7 +123,7 @@
 
                                     <div class="media">
                                         <a :href="financial_event.bestankar.get_absolute_url">
-                                            <img :src="financial_event.bestankar.logo" class="rounded" width="32" alt="">
+                                            <img :src="financial_event.bestankar.thumbnail" class="rounded" width="32" alt="">
                                         </a>
                                         <div class="media-body mr-3">
                                             <div>
