--- a/accounting/templates/accounting/includes/invoices-app/template.html
+++ b/accounting/templates/accounting/includes/invoices-app/template.html
@@ -89,7 +89,7 @@
                                 <td>
                                     <div class="media">
                                         <a :href="invoice.bedehkar.get_absolute_url">
-                                            <img :src="invoice.bedehkar.logo" class="rounded" width="32" alt="">
+                                            <img :src="invoice.bedehkar.thumbnail" class="rounded" width="32" alt="">
                                         </a>
                                         <div class="media-body mr-3">
                                             <div>
@@ -119,7 +119,7 @@
                                 <td>
                                     <div class="media">
                                         <a :href="invoice.bestankar.get_absolute_url">
-                                            <img :src="invoice.bestankar.logo" class="rounded" width="32" alt="">
+                                            <img :src="invoice.bestankar.thumbnail" class="rounded" width="32" alt="">
                                         </a>
                                         <div class="media-body mr-3">
                                             <div>
