--- a/chef/templates/chef/includes/add-meal-app/template.html
+++ b/chef/templates/chef/includes/add-meal-app/template.html
@@ -49,7 +49,7 @@
                 <hr />
                 <a :href="bedehkar.get_absolute_url" v-if="bedehkar">
                   <div class="media">
-                    <img :src="bedehkar.logo" width="64" alt="" />
+                    <img :src="bedehkar.thumbnail" width="64" alt="" />
                     <div class="mr-2 media-body">
                       <h5 class="my-2">
                         <span
@@ -105,7 +105,7 @@
                 <hr />
                 <a :href="bestankar.get_absolute_url" v-if="bestankar">
                   <div class="media">
-                    <img :src="bestankar.logo" width="64" alt="" />
+                    <img :src="bestankar.thumbnail" width="64" alt="" />
                     <div class="mr-2 media-body">
                       <h5 class="my-2">
                         <span
