--- a/transport/templates/transport/includes/maintenance-invoices-app/template.html
+++ b/transport/templates/transport/includes/maintenance-invoices-app/template.html
@@ -120,7 +120,7 @@
                                 <td>
                                     <div class="media">
                                         <a :href="maintenance_invoice.bedehkar.get_absolute_url">
-                                            <img :src="maintenance_invoice.bedehkar.logo" class="rounded" width="32" alt="">
+                                            <img :src="maintenance_invoice.bedehkar.thumbnail" class="rounded" width="32" alt="">
                                         </a>
                                         <div class="media-body mr-3">
                                             <div>
@@ -150,7 +150,7 @@
                                 <td>
                                     <div class="media">
                                         <a :href="maintenance_invoice.bestankar.get_absolute_url">
-                                            <img :src="maintenance_invoice.bestankar.logo" class="rounded" width="32" alt="">
+                                            <img :src="maintenance_invoice.bestankar.thumbnail" class="rounded" width="32" alt="">
                                         </a>
                                         <div class="media-body mr-3">
                                             <div>
