--- a/accounting/templates/accounting/invoice-edit.html
+++ b/accounting/templates/accounting/invoice-edit.html
@@ -31,7 +31,7 @@
                 <a target="_blank" :href="bedehkar.get_absolute_url">
                   <div class="media">
                     <img
-                      :src="bedehkar.logo"
+                      :src="bedehkar.thumbnail"
                       class="rounded-circle"
                       width="48"
                       alt=""
@@ -66,7 +66,7 @@
                 <a target="_blank" :href="bestankar.get_absolute_url">
                   <div class="media">
                     <img
-                      :src="bestankar.logo"
+                      :src="bestankar.thumbnail"
                       class="rounded-circle"
                       width="48"
                       alt=""
