--- a/accounting/templates/accounting/invoice-print.html
+++ b/accounting/templates/accounting/invoice-print.html
@@ -6,7 +6,7 @@
       <div class="card-body">
         <div class="text-center">
           <img
-            src="{{invoice.bestankar.logo}}"
+            src="{{invoice.bestankar.thumbnail}}"
             class="mb-2"
             width="96"
             alt=""
