--- a/transport/templates/transport/includes/add-maintenance-invoice-app/template.html
+++ b/transport/templates/transport/includes/add-maintenance-invoice-app/template.html
@@ -43,7 +43,7 @@
                 <hr />
                 <a :href="bedehkar.get_absolute_url" v-if="bedehkar">
                   <div class="media">
-                    <img :src="bedehkar.logo" width="64" alt="" />
+                    <img :src="bedehkar.thumbnail" width="64" alt="" />
                     <div class="mr-2 media-body">
                       <h5 class="my-2">
                         <span :class="'text-'+bedehkar.color" v-text="bedehkar.name"></span>
@@ -82,7 +82,7 @@
                 <hr />
                 <a :href="bestankar.get_absolute_url" v-if="bestankar">
                   <div class="media">
-                    <img :src="bestankar.logo" width="64" alt="" />
+                    <img :src="bestankar.thumbnail" width="64" alt="" />
                     <div class="mr-2 media-body">
                       <h5 class="my-2">
                         <span :class="'text-'+bestankar.color" v-text="bestankar.name"></span>
