--- a/accounting/templates/accounting/includes/add-invoice-line-app/template.html
+++ b/accounting/templates/accounting/includes/add-invoice-line-app/template.html
@@ -26,7 +26,9 @@
 
           <div class="col-md-12">
             <a target="_blank" class="mx-2" href="{% url 'accounting:products' %}">همه کالاها</a>
+            <button @click="add_product()" v-if="invoice_line_items.length==0" class="btn btn-success">+</button>
             <a target="_blank" class="mx-2" href="{% url 'accounting:services' %}">همه خدمات</a>
+            <button @click="add_service()" v-if="invoice_line_items.length==0" class="btn btn-success">+</button>
           </div>
 
           <div class="col-md-12">
